# piscuss

./: Dockerfile  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: python-app.yml  test-django-app.yml
piscuss/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: index.html
tests/feature/: test_api_root.py  test_api_user.py
